# gitnarrative

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  security-fixes.md
gitnarrative/: __init__.py  classifier.py  cli.py  clusterer.py  git_reader.py  narrator.py  store.py  synthesizer.py
gitnarrative/templates/: narrative.md.jinja  synthesized.md.jinja
templates/: feature.md.jinja  minor_summary.md.jinja  narrative.md.jinja
